<resources>
    <string name="app_name">Bloom [XML]</string>

    <!-- Welcome page -->
    <string name="label_beautiful_home_garden_solutions">Beautiful home garden solutions</string>
    <string name="button_create_account">Create account</string>

    <!-- Login page -->
    <string name="message_privacy_policy">By clicking below, you agree to our <u>Terms of Use</u> and consent to our <u>Privacy Policy</u></string>
    <string name="label_log_in_with_email">Log in with email</string>
    <string name="hint_email_address">Email address</string>
    <string name="hint_password">Password (8+ characters)</string>

    <!-- common-->
    <string name="button_log_in">Log in</string>

    <!-- Home page-->
    <string name="hint_search">Search</string>
    <string name="label_browse_themes">Browse themes</string>
    <string name="label_design_home_garden">Design your home garden</string>
    <string name="label_description_placeholder">This is a description</string>
    <string name="label_home">Home</string>
    <string name="label_favorites">Favorites</string>
    <string name="label_profile">Profile</string>
    <string name="label_cart">Cart</string>
    <string name="label_monstera">Monstera</string>
    <string name="label_aglaonema">Aglaonema</string>
    <string name="label_peace_lily">Peace lily</string>
    <string name="label_fiddle_leaf_tree">Fiddle leaf tree</string>
    <string name="label_snake_plant">Snake plant</string>
    <string name="label_pothos">Pothos</string>
    <string name="label_desert_chic">Desert chic</string>
    <string name="label_tiny_terrariums">Tiny terrariums</string>
    <string name="label_jungle_vibes">Jungle vibes</string>
    <string name="label_easy_care">Easy care</string>
    <string name="label_statements">Statements</string>
</resources>