<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HomeFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextSearch"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_search"
        app:boxStrokeColor="@color/md_text_input_container"
        app:hintTextColor="@color/md_text_input_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/round_search_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            style="@style/subtitle1"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewBrowseThemes"
        style="@style/heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_browse_themes"
        android:textColor="@color/colorOnBackground"
        app:layout_constraintStart_toStartOf="@id/editTextSearch"
        app:layout_constraintTop_toBottomOf="@id/editTextSearch" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewHorizontal"
        android:layout_width="0dp"
        android:layout_height="136dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/editTextSearch"
        app:layout_constraintTop_toBottomOf="@id/textViewBrowseThemes" />

    <TextView
        android:id="@+id/textViewDesignHomeGarden"
        style="@style/heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/label_design_home_garden"
        android:textColor="@color/colorOnBackground"
        app:layout_constraintStart_toStartOf="@id/recyclerViewHorizontal"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewHorizontal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/textViewDesignHomeGarden"
        app:layout_constraintBottom_toBottomOf="@id/textViewDesignHomeGarden"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:tint="@color/colorOnBackground"
        android:src="@drawable/baseline_filter_list_24"
        tools:ignore="contentDescription"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewVertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDesignHomeGarden" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:itemIconSize="24dp"
        app:itemActiveIndicatorStyle="@style/bottomNavStyle"
        app:labelVisibilityMode="labeled"
        app:itemTextColor="@color/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>